# mlx-fashion-mnist

./: README.md  main.py  pyproject.toml  train_mlx.py  train_pytorch.py
