[project]
name = "mlx-fashion-mnist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "scikit-learn>=1.7.2",
    "mlx>=0.29.3 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
